# calorimeter

./: README.md  pyproject.toml  sample.csv
notebooks/: instructions.ipynb  solution.ipynb
s1_sol/: __init__.py  data_loader.py  estimators.py  fitting.py  mle_fits.py  plotting.py  profiling.py  simultaneous_fit.py
